# moneyman

./: .gitignore  Cargo.toml  LICENSE  README.md  eurofxref-hist.csv  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/moneyman/: Cargo.toml
crates/moneyman/benches/: convert.rs
crates/moneyman/src/: ecb.rs  exchange_store.rs  main.rs  persistence.rs
crates/moneyman/src/persistence/: exchange_rate.rs  fallback.rs  seed.rs
crates/moneyman_cli/: Cargo.toml
crates/moneyman_cli/src/: currency.rs  main.rs
crates/moneyman_core/: Cargo.toml
crates/moneyman_core/benches/: convert.rs
crates/moneyman_core/src/: blocking.rs  ecb.rs  error.rs  exchange_store.rs  lib.rs  persistence.rs
crates/moneyman_core/src/persistence/: exchange_rate.rs  fallback.rs  seed.rs
crates/moneyman_sync/: Cargo.toml
crates/moneyman_sync/src/: lib.rs
test_data/indexed/: eurofxref-hist.csv  eurofxref-hist.db3
test_data/non_indexed/: eurofxref-hist.csv  eurofxref-hist.db3
