[workspace]
members = [ "crates/*" ]

[workspace.package]
version = "0.1.0"
authors = [ "sekun <software@sekun.net>" ]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/sekunho/moneyman"
readme = "README.md"

[workspace.dependencies]
moneyman = { path = "crates/moneyman", version = "0.1" }

## HTTP client
reqwest = { version = "0.11", features = [ "blocking" ] }

## Bytes data type
bytes = { version = "1.4" }

## Handling ZIP archives/buffers
zip = { version = "0.6" }

## Here comes the moneeeeeyyyy, here comes the money
rusty-money = { version = "0.4" }

## Date/time stuff
chrono = "0.4"

## Because I don't want to deal with CSVs, even via polars lol
rusqlite = { version = "0.29", features = ["bundled", "vtab", "csvtab", "chrono" ] }

## Decimal data type
rust_decimal_macros = "1.29"
rust_decimal = "1.29"

## directory stuff
dirs = "5.0"

## For less error boilerplate
thiserror = "1.0"

clap = { version = "4.2", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
