[package]
name = "moneyman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moneyman_core = { workspace = true }
moneyman_sync = { workspace = true }
rusty-money = { workspace = true }
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_decimal = { workspace = true }
dirs = { workspace = true }
