[package]
name = "moneyman"
description = "A simple library for converting currencies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
# documentation.workspace = true

[dependencies]
rusty-money = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
criterion = { version = "0.4", features = [ "html_reports" ] }
rand = "0.8"

[[bench]]
name = "convert"
harness = false
