[package]
name = "moneyman_cli"
description = "A simple CLI for currency conversion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
# documentation.workspace = true

[dependencies]
moneyman = { workspace = true }
rusty-money = { workspace = true }
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_decimal = { workspace = true }
dirs = { workspace = true }
