[package]
name = "moneyman_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-money = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
criterion = { version = "0.4", features = [ "html_reports" ] }
rand = "0.8"

[[bench]]
name = "convert"
harness = false
